자주하는질문 관련 API 로직 수정